# CoLab-Team-inDevelopment

./: .gitignore  README.md  e -i HEAD@{1}
SourceCode/backend/colabTeam_web/: db.sqlite3  pyproject.toml
SourceCode/backend/colabTeam_web/api/: models.py  urls.py  views.py
SourceCode/backend/colabTeam_web/colabTeam_web/: asgi.py  settings.py  wsgi.py
SourceCode/backend/colabTeam_web/home_app/: apps.py  forms.py  views.py
SourceCode/backend/colabTeam_web/registration_app/: admin.py  apps.py  forms.py  models.py
SourceCode/backend/colabTeam_web/templates/: index.html
backend/colabTeam_web/: .env.example  .gitignore  db.sqlite3  manage.py  pyproject.toml
backend/colabTeam_web/api/: admin.py  models.py  serializers.py  urls.py
backend/colabTeam_web/api/migrations/: 0001_initial.py  0002_alter_membership_role_alter_post_benefits_and_more.py  0003_rename_user_id_post_user_remove_post_post_id_and_more.py  0004_rename_user_post_user_id_remove_post_id_and_more.py
backend/colabTeam_web/colabTeam_web/: asgi.py  settings.py  urls.py  wsgi.py
backend/colabTeam_web/home_app/: forms.py  urls.py  views.py
backend/colabTeam_web/registration_app/: admin.py  apps.py  auth.py  crypto.py  emails.py  forms.py  models.py  querysets.py  signals.py  tokens.py  urls.py  utils.py  views.py
backend/colabTeam_web/registration_app/api/: serializers.py  urls.py  views.py
backend/colabTeam_web/registration_app/migrations/: 0001_initial.py  0002_delete_userregister.py  0003_alter_profile_profilepic.py  0003_initial.py  (+10 more)
backend/colabTeam_web/templates/: base.html  index.html
(+326 files in other folders)
