[tool.poetry]
name = "colabteam-web"
version = "0.0.1"
description = "Colab Team web based on Django framework."
authors = ["Your Name <you@example.com>"]
license = "New BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
